--- a/package.xml
+++ b/package.xml
@@ -3,7 +3,7 @@
   <name>opencv_face_detection</name>
   <description>The opencv face detection package</description>
   <version>0.0.0</version>
-  <maintainer email="h-takematsu@athuman.com">takematsu</maintainer>
+  <maintainer email="haa-c001@athuman.com">athuman</maintainer>
   <license>Apache 2.0</license>
 
   <buildtool_depend>catkin</buildtool_depend>
